terminando vista compras y agregando layout

--- a/templatedjango/apptemplate/templates/compras/compras.html
+++ b/templatedjango/apptemplate/templates/compras/compras.html
@@ -1,105 +1,86 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base/template.html' %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <title>Template</title>
-  {% load static %}
-  <link rel="stylesheet" href="{% static '/css/style.css' %}">
-</head>
+{% block titulocompras %}
+  <title>mispelotas</title>
+{% endblock titulocompras %}
+  
+{% block compras %}
+<div class="container rounded">
 
-<body>
+    <div class="row" style="margin-top: 100px;">
 
-  <div class="contenedor">
-    <div class="form">
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title"> <strong>Agregar Compras</strong> </h5>
-          <form action="compras" method="POST">
-            {% csrf_token %}
+      <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
 
-            <!-- <div class="form-group">
-              <label for="exampleFormControlSelect1">Categoria:</label>
-              <select class="form-control" id="exampleFormControlSelect1" name="categoria">
-                {% for categorias in categoria  %}
-                <option id="opcion{{categorias.id}}" value="{{categorias.Nombre}}">{{categorias.Nombre}}</option>
+        <div class="card shadow p-3 mb-5 bg-white rounded" style="border:none;">
+          <div class="card-body">
+            <h5 class="card-title">Compras!</h5>
 
-                {% endfor %}
-              </select>
-            </div> -->
+            <form action="compras" method="POST">
+              {% csrf_token %}
+              <div class="form-group">
+                <select class="form-control" id="exampleFormControlSelect1" name="id_insumo" required>
+                  <!-- <option disabled selected value="0">Nombre Producto</option> -->
+                  {% for insumo in insumos  %}
+                  <option option id="opcion{{insumo.id}}" value="{{insumo.id}}">{{insumo.nombre}}</option>
 
-            <div class="form-group">
-              <label for="exampleFormControlSelect1">Nombre Producto:</label>
-              <select class="form-control" id="exampleFormControlSelect1" name="id_insumo">
-                {% for insumo in insumos  %}
-                <option id="opcion{{insumo.id}}" value="{{insumo.id}}">{{insumo.nombre}}</option>
+                  {% endfor %}
+                </select>
+              </div>
 
-                {% endfor %}
+              <div class="form-group">
+                <input type="number" class="form-control" id="exampleInputPassword1" name="cantidad"
+                  placeholder="Cantidad" step="0.01" required>
+              </div>
 
-              </select>
-            </div>
+              <div class="form-group">
+                <input type="number" class="form-control" id="exampleInputPassword1" name="precio"
+                  placeholder="Precio" required>
+              </div>
 
-            <!-- <div class="form-group">
-              <label for="exampleFormControlSelect1">Unidad de Medida:</label>
-              <select class="form-control" id="exampleFormControlSelect1" name="unidad_medida">
-                <option value="kg">Kg</option>
-                <option value="Unidades">Unidades</option>
-              </select>
-            </div> -->
+              <button type="submit" class="btn btn-outline-info float-right">Agregar</button>
 
-            <div class="form-group">
-              <label for="exampleInputPassword1">Cantidad:</label>
-              <input type="number" class="form-control" id="exampleInputPassword1" name="cantidad">
-            </div>
-
-            <div class="form-group">
-              <label for="exampleInputPassword1">Precio:</label>
-              <input type="number" class="form-control" id="exampleInputPassword1" name="precio">
-            </div>
-
-            <button type="submit" class="btn btn-primary">Agregar</button>
-          </form>
+            </form>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="tabla">
-      <div class="card" style="width: fit-content;">
-        <div class="card-body">
-          <h5 class="card-title">Compras</h5>
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th scope="col">Categoria</th>
-                <th scope="col">Producto</th>
-                <th scope="col">Unidad de Medida</th>
-                <th scope="col">Cantidad</th>
-                <th scope="col">Precio Unitario</th>
-                <th scope="col">Sub Total</th>
-                <th scope="col">Acciones</th>
 
+      </div>
+
+      <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8">
+
+        <div class="table-responsive">
+
+          <table class="table table-hover shadow p-3 mb-5 bg-white rounded ">
+
+            <thead style="background-color: #F5F6FA;">
+              <tr>
+                <th style="color: #A3A6B4;" scope="col">Categoria</th>
+                <th style="color: #A3A6B4;" scope="col">Producto</th>
+                <th style="color: #A3A6B4;" scope="col">Cantidad</th>
+                <th style="color: #A3A6B4;" scope="col">Medida</th>
+                <th style="color: #A3A6B4;" scope="col">Precio</th>
+                <th style="color: #A3A6B4;" scope="col">Total</th>
+                <th style="color: #A3A6B4;" scope="col">Acciones</th>
               </tr>
             </thead>
-            <tbody>
 
+            <tbody>
               {% for compra in compras  %}
 
               <tr>
-                <td>{{compra.categoria}}</td>
-                <td id="select{{compra.id_detalles_compras}}">{{compra.nombre}}</td>
-                <td>{{compra.unidad_medida}}</td>
-                <td>{{compra.cantidad}}</td>
-                <td>{{compra.precio}}</td>
-                <td class="calcular_compra">{{compra.subtotal}}</td>
-                
+                <td class="small">{{compra.categoria}}</td>
+                <td class="small" id="select{{compra.id_detalles_compras}}">{{compra.nombre}}</td>
+                <td class="small">{{compra.cantidad}}</td>
+                <td class="small">{{compra.unidad_medida}}</td>
+                <td class="small">{{compra.precio}}</td>
+                <td class=" small calcular_compra">{{compra.subtotal}}</td>
+
 
                 <!-- codigo para el boton de editar 
                 -------------------------------------------------- -->
-                <td>
+                <td class="small">
                   {% load static %}
-                  <i style="color: white;" type="button" data-toggle="modal" data-target="#editar{{compra.id_detalles_compras}}"><i><img
+                  <i style="color: white;" type="button" data-toggle="modal"
+                    data-target="#editar{{compra.id_detalles_compras}}"><i><img
                         src="{% static '/assets/icons/icon_edit.svg' %}" alt=""></i></i>
 
                   <div class="modal fade" id="editar{{compra.id_detalles_compras}}" tabindex="-1" role="dialog"
@@ -116,38 +97,34 @@
                           <form method="POST" action="/editar">
                             {% csrf_token %}
                             <div class="form-group">
-                              <!-- <label for="message-text" class="col-form-label">Comentario:</label>
-                                                  <textarea name="comentario" class="form-control"
-                                                  id="message-text">{{user.comentario}}</textarea> -->
 
                               <label for="nombre{{insumo.id}}" class="col-form-label">Producto:</label>
                               <select name="producto" id="nombre{{insumo.id}}" class="form-control">
 
                                 {% for insumo in insumos  %}
-                                <option class="productos{{compra.id_detalles_compras}}" id="opcion{{insumo.nombre}}"  value="{{insumo.id}}">{{insumo.nombre}}</option>
+                                <option class="productos{{compra.id_detalles_compras}}"
+                                  id="opcion{{insumo.nombre}}" value="{{insumo.id}}">{{insumo.nombre}}</option>
 
                                 {% endfor %}
 
 
                               </select>
 
-                                                <script>
-                                                  
-                                                  var elements = document.getElementsByClassName('productos{{compra.id_detalles_compras}}')
-                                                  var select = document.getElementById('select{{compra.id_detalles_compras}}')
+                              <script>
+                                var elements = document.getElementsByClassName(
+                                  'productos{{compra.id_detalles_compras}}')
+                                var select = document.getElementById('select{{compra.id_detalles_compras}}')
 
-                                                  for (var i =0; i < elements.length; i++)
-                                                  {
-                                                    console.log(elements[i].innerHTML)
-                                                    if (elements[i].innerHTML == select.innerHTML)
-                                                    {
-                                                      elements[i].setAttribute('selected','selected');
-                                                      
-                                                    }
-                                                  }
-                     
-                                                  console.log(select.innerHTML)
-                                                </script>
+                                for (var i = 0; i < elements.length; i++) {
+                                  console.log(elements[i].innerHTML)
+                                  if (elements[i].innerHTML == select.innerHTML) {
+                                    elements[i].setAttribute('selected', 'selected');
+
+                                  }
+                                }
+
+                                console.log(select.innerHTML)
+                              </script>
                             </div>
                             <div class="form-group">
                               <label for="recipient-name" class="col-form-label">Cantidad:</label>
@@ -159,9 +136,9 @@
                               <input name="precio" value="{{compra.precio}}" type="text" class="form-control"
                                 id="recipient-name">
                             </div>
-                  
+
                             <input type="hidden" name="iden" value="{{compra.id_detalles_compras}}">
-        
+
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
@@ -172,20 +149,20 @@
                       </div>
                     </div>
                   </div>
-                </td>
 
 
-                <!-- codigo para el boton de borrar  -->
-                <!-- -------------------------------------------- -->
-                <td>
+
+                  <!-- codigo para el boton de borrar  -->
+                  <!-- -------------------------------------------- -->
+
 
                   <!-- Button trigger modal -->
-                  <i style="color: white;" type="button" data-toggle="modal"
+                  <i style="color: white; padding:0 10px ;" type="button" data-toggle="modal"
                     data-target="#borrar{{compra.id_detalles_compras}}">
                     {% load static %}
                     <img src="{% static '/assets/icons/circle-remove.svg' %}" alt="">
                   </i>
-    
+
                   <!-- Modal -->
                   <div class="modal fade" id="borrar{{compra.id_detalles_compras}}" tabindex="-1" role="dialog"
                     aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -204,7 +181,7 @@
                             Desea Eliminar este Registro ?
                           </div>
                           <div class="modal-footer">
-    
+
                             <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
                             <button type="submit" class="btn btn-info">Borrar</button>
                           </div>
@@ -216,22 +193,23 @@
               </tr>
               {% endfor %}
 
+
             </tbody>
           </table>
         </div>
 
+
+
+
         <div class="totales">
 
           <div class="form-group">
-            <input type="text" class="form-control" id="total" placeholder="Total" readonly>
+            <input type="text" style="width: 50%;" class="form-control" id="total" placeholder="Total" readonly>
           </div>
           <div class="form-group">
-            <input type="date" class="form-control" id="fecha_parcial">
+            <input type="date" style="width: 50%;" class="form-control" id="fecha_parcial">
           </div>
 
-          <script>
-
-          </script>
         </div>
 
         <div class="botones">
@@ -239,21 +217,19 @@
           <form action="registrar" method="post">
             {% csrf_token %}
             {% for conjunto_compras in compras  %}
-              <input type="hidden" name="id_para_compras" value="{{conjunto_compras.id_detalles_compras}}">
+            <input type="hidden" name="id_para_compras" value="{{conjunto_compras.id_detalles_compras}}">
             {% endfor %}
-              
+
             <input type="hidden" id="fecha" name="fecha">
             <input type="hidden" id="total_compra" name="total_compra">
 
             <script>
-
               // este codigo es para poder mostrar en tiempo real la cantidad total de la compra 
 
               var calcular_total = document.getElementsByClassName('calcular_compra')
               var suma = 0
-              for (i = 0; i < calcular_total.length; i ++ )
-              {
-                suma += parseInt(calcular_total[i].innerHTML,10);
+              for (i = 0; i < calcular_total.length; i++) {
+                suma += parseInt(calcular_total[i].innerHTML, 10);
               }
 
               total_compra = document.getElementById('total')
@@ -272,10 +248,10 @@
               var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
               var yyyy = String(today.getFullYear());
 
-              date = String(yyyy + '-' + mm  + '-' + dd);
+              date = String(yyyy + '-' + mm + '-' + dd);
               // document.write(today);
-              
-              
+
+
               fecha_parcial = document.getElementById('fecha_parcial');
 
               // fecha_utc = date.toUTCString()
@@ -288,47 +264,47 @@
 
 
               // en esta funcion se cambia el vlor de la fecha al input oculto ara poer enviarlo al servidor
-              function cambio(){
+              function cambio() {
                 fecha = document.getElementById('fecha')
                 fecha_parcial = document.getElementById('fecha_parcial');
                 fecha.value = fecha_parcial.value;
 
               }
-
-              
             </script>
-            <button type="submit" class="btn btn-primary" onclick="cambio()">Registrar</button>
+            <button type="button" class="btn btn-outline-success float-right" data-toggle="modal" data-target="#confirmar"
+              onclick="cambio()">Registrar</button>
 
+            <div class="modal fade" id="confirmar" tabindex="-1" role="dialog"
+              aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Confirmacion</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+  
+      
+                    <div class="modal-body">
+                     Desea registrar esta compra?
+                    </div>
+                    <div class="modal-footer">
+
+                      <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cancelar</button>
+                      <button type="submit" class="btn btn-outline-success">Registrar</button>
+                    </div>
+                  
+                </div>
+              </div>
+
+
+            </div>
           </form>
         </div>
 
       </div>
     </div>
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
-  </script>
-
-</body>
-
-</html>
+{% endblock compras %}
+    
