vista insumos terminada

--- a/templatedjango/apptemplate/templates/base/template.html
+++ b/templatedjango/apptemplate/templates/base/template.html
@@ -48,7 +48,7 @@
         <a 
           href="insumos" class="list-group-item list-group-item-action bg-light">
           <i class="fa fa-bars mr-2"> {% load static %} <img src="{% static '/assets/icons/icon_cart.svg' %}">
-          </i><small class="text-uppercase font-weight-bold" style="color: #A3A6B4;">Insumos</small>
+          </i><small class="text-uppercase font-weight-bold" style="color: #A3A6B4;" onclick="verificar()">Insumos</small>
         </a>
 
         <a 
@@ -198,6 +198,8 @@
         $("#wrapper").toggleClass("toggled");
       });
     </script>
+
+    <script src="{% static '/js/functions.js' %}"></script>
 
 </body>
 
