--- a/templatedjango/apptemplate/templates/compras/compras.html
+++ b/templatedjango/apptemplate/templates/compras/compras.html
@@ -64,6 +64,9 @@
           </thead>
 
           <tbody>
+            
+            {% if compras %}
+              
             {% for compra in compras  %}
 
             <tr>
@@ -191,6 +194,10 @@
               </td>
             </tr>
             {% endfor %}
+            {% else %}
+              <td></td>
+            {% endif %}
+              
 
 
           </tbody>
