--- a/templatedjango/apptemplate/templates/insumos/insumos.html
+++ b/templatedjango/apptemplate/templates/insumos/insumos.html
@@ -18,15 +18,21 @@
 
                     <h5 class="card-title">Insumos!</h5>
 
-                    <form action="" method="post">
+                    <form action="insumos" method="post">
 
+                        {% csrf_token %}
+
+                        <input type="hidden" name="guardar" value="guardar">
                         <div class="form-group">
 
                             <div class="form-group">
 
                                 <select class="form-control" name="categoria" placeholder="Categoria">
-                                    <option value="productos">Plantas</option>
-                                    <option value="productos varios">Productos Varios</option>
+                                    {% for categorias in categoria  %}
+                                    <option option id="opcion{{categorias.id}}" value="{{categorias.id}}">
+                                        {{categorias.Nombre}}</option>
+
+                                    {% endfor %}
                                 </select>
 
                             </div>
@@ -48,9 +54,9 @@
 
                                 <select class="form-control" name="medida" placeholder="medida">
 
-                                    <option disabled selected>Medida</option>
-                                    <option value="productos">Unidades</option>
-                                    <option value="productos varios">Kg</option>
+                                    <!-- <option disabled selected>Medida</option> -->
+                                    <option value="unidades">Unidades</option>
+                                    <option value="kg">kg</option>
 
                                 </select>
 
@@ -81,27 +87,167 @@
                     </tr>
                 </thead>
                 <tbody>
+
+                    {% for insumo in insumos  %}
+
                     <tr>
-                        <td>Plantas Madre</td>
-                        <td>Tuna del Desierto</td>
-                        <td>4</td>
-                        <td>Unidades</td>
+                        <td class="small" id="select{{insumo.id}}">{{insumo.categoria}}</td>
+                        <td class="small">{{insumo.nombre}}</td>
+                        <td class="small">{{insumo.cantidad}}</td>
+                        <td class="small" id="medida{{insumo.id}}">{{insumo.unidad_de_medida}}</td>
+
+
+                        <!-- codigo para el boton de editar 
+                            -------------------------------------------------- -->
                         <td class="small">
                             {% load static %}
-                            <i><i><img src="{% static '/assets/icons/icon_edit.svg' %}" alt=""></i>
-                            <i style="color: white; padding:0 10px ;"><img src="{% static '/assets/icons/circle-remove.svg' %}" alt=""></i></i>
-                            
+                            <i style="color: white;" type="button" data-toggle="modal"
+                                data-target="#editar{{insumo.id}}"><i><img
+                                        src="{% static '/assets/icons/icon_edit.svg' %}" alt=""></i></i>
 
-                    </tr>
-                    <tr>
-                        <td>Productos Varios</td>
-                        <td>Macetas</td>
-                        <td>10</td>
-                        <td>Unidades</td>
-                        <td class="small"><i><img style="padding-right: 10px;" src="img/icon_edit.svg"></i><i><img
-                                    src="img/circle-remove.svg" alt=""></i>
+                            <!-- codigo para el boton de borrar  -->
+                            <!-- -------------------------------------------- -->
+                            <!-- Button trigger modal -->
+                            <i style="color: white; padding:0 10px ;" type="button" data-toggle="modal"
+                                data-target="#borrar{{compra.id_detalles_compras}}">
+                                {% load static %}
+                                <img src="{% static '/assets/icons/circle-remove.svg' %}" alt="">
+                            </i>
 
+                        </td>
+                        <!-- modal para el boton de editar -->
+
+                        <div class="modal fade" id="editar{{insumo.id}}" tabindex="-1" role="dialog"
+                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Editar Datos</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form method="POST" action="/insumos">
+                                            {% csrf_token %}
+
+
+                                            <div class="form-group">
+
+                                                <label for="nombre{{insumo.id}}"
+                                                    class="col-form-label">Categoria:</label>
+                                                <select name="categoria" id="nombre{{insumo.id}}" class="form-control">
+
+                                                    {% for categorias in categoria  %}
+                                                    <option class="productos{{insumo.id}}" id="opcion{{insumo.nombre}}"
+                                                        value="{{categorias.id}}">{{categorias.Nombre}}</option>
+
+                                                    {% endfor %}
+
+
+                                                </select>
+
+                                                <script language="Javascript1.5">
+                                                    var elements = document.getElementsByClassName(
+                                                        'productos{{insumo.id}}')
+                                                    // elements[1].setAttribute('selected','selected')
+                                                    var select = document.getElementById('select{{insumo.id}}')
+
+                                                    function selected(elements,select){
+
+                                                        for (var i = 0; i < elements.length; i++) {
+                                                            // console.log(elements[i].innerHTML)
+                                                            if (elements[i].innerHTML == select.innerHTML) {
+                                                                elements[i].setAttribute('selected', 'selected');
+
+                                                            }
+
+
+                                                        }
+                                                    }
+
+                                                    selected(elements,select)
+
+
+                                                    // console.log(select.innerHTML)
+                                                </script>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="recipient-name" class="col-form-label">Nombre del
+                                                    Producto:</label>
+                                                <input name="nombre" value="{{insumo.nombre}}" type="text"
+                                                    class="form-control" id="recipient-name">
+                                            </div>
+
+                                            <div class="form-group">
+                                                <label for="recipient-name" class="col-form-label">Cantidad:</label>
+                                                <input name="cantidad" value="{{insumo.cantidad}}" type="text"
+                                                    class="form-control" id="recipient-name">
+                                            </div>
+
+                                            <div class="form-group">
+                                                <label for="recipient-name" class="col-form-label">Unidad de
+                                                    Medida:</label>
+                                                <select class="form-control" name="medida" id="recipient-name">
+                                                    <!-- <option disabled selected>Medida</option> -->
+                                                    <option class="categoria_medida{{insumo.id}}" value="unidades">unidades</option>
+                                                    <option class="categoria_medida{{insumo.id}}" value="kg">kg</option>
+                                                </select>
+                                                <script type="text/javascript">
+                                                    categorias = document.getElementsByClassName('categoria_medida{{insumo.id}}')
+                                                    opciones = document.getElementById('medida{{insumo.id}}')
+
+                                                    selected(categorias,opciones)
+
+                                                    // console.log(select.innerHTML, 'fuera del for')
+                                                </script>
+
+
+                                            </div>
+
+                                            <input type="hidden" name="iden" value="{{insumo.id}}">
+                                            <input type="hidden" name="editar" value="editar">
+
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-outline-danger"
+                                            data-dismiss="modal">Cancelar</button>
+                                        <button type="submit" class="btn btn-outline-success">Guardar Cambios</button>
+                                    </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Modal para borrar -->
+                        <div class="modal fade" id="borrar{{compra.id_detalles_compras}}" tabindex="-1" role="dialog"
+                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Confirmacion</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <form action="insumos" method="post">
+                                        {% csrf_token %}
+                                        <div class="modal-body">
+                                            <input type="hidden" name="id_borrar" value="{{insumo.id}}">
+                                            <input type="hidden" name="borrar" value="borrar">
+                                            Desea Eliminar este Registro ?
+                                        </div>
+                                        <div class="modal-footer">
+
+                                            <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cancelar</button>
+                                            <button type="submit" class="btn btn-outline-info">Borrar</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
                     </tr>
+                    {% endfor %}
 
 
 
