--- a/templatedjango/apptemplate/templates/insumos/insumos.html
+++ b/templatedjango/apptemplate/templates/insumos/insumos.html
@@ -40,13 +40,13 @@
                             <div class="form-group">
 
                                 <input type="text" class="form-control" name="producto"
-                                    placeholder="Nombre del Producto">
+                                    placeholder="Nombre del Producto" required>
 
                             </div>
 
                             <div class="form-group">
 
-                                <input type="number" class="form-control" name="cantidad" placeholder="Cantidad">
+                                <input type="number" class="form-control" name="cantidad" placeholder="Cantidad" required>
 
                             </div>
 
