--- a/templatedjango/apptemplate/templates/compras/compras.html
+++ b/templatedjango/apptemplate/templates/compras/compras.html
@@ -69,7 +69,7 @@
               
             {% for compra in compras  %}
 
-            <tr>
+            <tr class="tabla_compras">
               <td class="small">{{compra.categoria}}</td>
               <td class="small" id="select{{compra.id_detalles_compras}}">{{compra.nombre}}</td>
               <td class="small">{{compra.cantidad}}</td>
